# PasswordManagerHabr

./: .gitignore  README.md
cxx-wx-app-password-manager/: CMakeLists.txt
cxx-wx-app-password-manager/res/: salt  test.txt
cxx-wx-app-password-manager/src/: cipher.cpp  cipher.h  jnicloudelib.cpp  jnicloudelib.h  main.cpp  mainframe.cpp  mainframe.h  xmlfile.cpp  xmlfile.h
java-lib-password-manager/: Makefile
java-lib-password-manager/src/: CloudApp.java  CloudLib.java
java-lib-password-manager/src/com/yandex/disk/client/: ListItem.java  TransportClient.java
kotlin-android-app-password-manager/: settings.gradle.kts
kotlin-android-app-password-manager/app/: build.gradle.kts
kotlin-android-app-password-manager/app/src/main/: AndroidManifest.xml
kotlin-android-app-password-manager/app/src/main/java/ru/rbkdev/passwordmanager/: MainActivity.kt  cipher.kt  xmlfile.kt
kotlin-android-app-password-manager/app/src/main/res/layout/: activity_main.xml
kotlin-android-app-password-manager/app/src/main/res/values/: themes.xml
kotlin-android-app-password-manager/gradle/wrapper/: gradle-wrapper.properties
resources/: iv  keys.xml
